[package]
name = "rustmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.36.0"
odbc-api = "10.0.0"
anyhow = "1.0.93"
csv = "1.3.1"
serde_derive = "1.0"

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # If you are using serde_json for JSON serialization